--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Software Development Project",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "GeraldAC",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
