--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --watch src --ext js,json --exec node src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "seed": "node src/config/seeds/seedAll.js",
+    "reset": "node src/config/seeds/resetAndSeed.js"
   },
   "keywords": [],
   "author": "GeraldAC",
