--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "dev": "nodemon --watch src --ext js,json --exec node src/server.js",
     "start": "node src/server.js",
+    "reset": "node src/config/seeds/resetAndSeed.js",
     "seed": "node src/config/seeds/seedAll.js",
-    "reset": "node src/config/seeds/resetAndSeed.js"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "GeraldAC",
@@ -24,10 +25,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@jest/globals": "^30.0.4",
+    "@types/jest": "^30.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^29.0.1",
     "globals": "^16.2.0",
+    "jest": "^30.0.4",
     "nodemon": "^3.1.10",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.8.3"
   }
 }
